# quickjs-rusty

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  justfile  release.toml
.cargo/: config.toml
.github/workflows/: main.yml
examples/: catch_promise_rejection.rs  custom_callback.rs  eval.rs  eval_module.rs  interrupt_handler.rs  promise.rs  serde.rs
libquickjs-sys/: CHANGELOG.md  CHANGELOG.old.md  Cargo.toml  README.md  build.rs  release.toml  wrapper.h
libquickjs-sys/embed/: bindings-32.rs  bindings.rs  extensions.c  extensions.h  static-functions.c
libquickjs-sys/embed/patches/: iterator_func.patch  js-tobigint64-overflow.patch  promise.patch
libquickjs-sys/embed/quickjs/: quickjs.c
libquickjs-sys/src/: lib.rs  static-functions.rs
src/: callback.rs  compile.rs  console.rs  context.rs  errors.rs  lib.rs  module_loader.rs  serde.rs  tests.rs  utils.rs  value.rs
src/bindings/: callback.rs  compile.rs  convert.rs  mod.rs  module.rs  utils.rs  value.rs
src/context/: builder.rs  context.rs  wrapper.rs
src/errors/: context_error.rs  execution_error.rs  value_error.rs
src/serde/: de.rs  error.rs  ser.rs  utils.rs
src/value/: array.rs  atom.rs  bigint.rs  compiled_function.rs  function.rs  mod.rs  module.rs  object.rs  promise.rs  tag.rs  value.rs
tests/: convert.rs  promise.rs  runtime.rs  serde.rs
tests/fixtures/: long_string.txt
