[package]
edition = "2018"
name = "quickjspp"
description = "QuickJS Javascript engine wrapper using quickjs fork named quickjspp"
version = "0.1.0"
readme = "README.md"
documentation = "https://docs.rs/quickjspp"
repository = "https://github.com/Icemic/quickjspp-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>", "Icemic J <bingfeng.web@gmail.com>"]
keywords = ["quickjs", "quickjspp", "javascript", "js", "engine", "interpreter"]

[package.metadata.docs.rs]
features = [ "chrono", "bigint", "log" ]

[features]
default = ["chrono"]
patched = ["libquickjspp-sys/patched"]
bigint = ["num-bigint", "num-traits", "libquickjspp-sys/patched"]

[dependencies]
libquickjspp-sys = { version = "0.1", path = "./libquickjs-sys" }
chrono = { version = "0.4.7", optional = true }
num-bigint = { version = "0.2.2", optional = true }
num-traits = { version = "0.2.0", optional = true }
log = { version = "0.4.8", optional = true }
once_cell = "1.2.0"

[workspace]
members = [
    "libquickjs-sys",
]

