[package]
authors = ["Christoph Herzog <chris@theduke.at>", "Icemic J <bingfeng.web@gmail.com>"]
description = "QuickJS Javascript engine wrapper using quickjs fork named quickjspp"
documentation = "https://docs.rs/quickjspp"
edition = "2018"
keywords = ["quickjs", "javascript", "js", "engine", "interpreter"]
license = "MIT"
name = "quickjspp"
readme = "README.md"
repository = "https://github.com/Icemic/quickjspp-rs"
version = "0.5.0"

[package.metadata.docs.rs]
features = ["chrono", "bigint", "log"]

[features]
bigint = ["num-bigint", "num-traits", "libquickjspp-sys/patched"]
default = ["chrono", "serde", "bigint"]
patched = ["libquickjspp-sys/patched"]
serde = ["thiserror", "dep:serde"]

[dependencies]
anyhow = {version = "1"}
chrono = {version = "0.4.7", optional = true}
libquickjspp-sys = {version = "0.1", path = "./libquickjs-sys"}
log = {version = "0.4.8", optional = true}
num-bigint = {version = "0.4.4", optional = true}
num-traits = {version = "0.2.0", optional = true}
serde = {version = "1", features = ["derive"], optional = true}
thiserror = {version = "1", optional = true}

[dev-dependencies]
serde_json = "1"

[workspace]
members = [
  "libquickjs-sys",
]
