[package]
authors = ["Christoph Herzog <chris@theduke.at>", "Icemic J <bingfeng.web@gmail.com>"]
description = "A rusty QuickJS (QuickJS-NG) Javascript engine wrapper, and more."
documentation = "https://docs.rs/quickjs-rusty"
edition = "2021"
keywords = ["quickjs", "javascript", "js", "interpreter", "runtime"]
license = "MIT"
name = "quickjs-rusty"
readme = "README.md"
repository = "https://github.com/Icemic/quickjs-rusty"
version = "0.7.0"

[package.metadata.docs.rs]
features = ["chrono", "bigint"]

[features]
bigint = ["num-bigint", "num-traits"]
default = ["chrono", "serde", "bigint"]
serde = ["thiserror", "dep:serde"]

[dependencies]
anyhow = {version = "1"}
chrono = {version = "0.4.7", optional = true}
libquickjs-ng-sys = {version = "^0.7.1", path = "./libquickjs-sys"}
log = "0.4"
num-bigint = {version = "0.4.4", optional = true}
num-traits = {version = "0.2.0", optional = true}
serde = {version = "1", features = ["derive"], optional = true}
thiserror = {version = "1", optional = true}

[dev-dependencies]
serde_json = "1"

[workspace]
members = [
  "libquickjs-sys",
]
