[package]
edition = "2018"
name = "libquickjspp-sys"
description = "QuickJSpp Javascript Engine FFI bindings"
version = "0.1.0"
readme = "README.md"
documentation = "https://docs.rs/quickjspp-sys"
repository = "https://github.com/Icemic/quickjspp-rs"
license = "MIT"
authors = ["Christoph Herzog <chris@theduke.at>", "Icemic J <bingfeng.web@gmail.com>"]
categories = ["external-ffi-bindings"]
keywords = ["quickjs", "quickjspp"]

build = "build.rs"

[features]
bundled = ["cc", "copy_dir"]
patched = ["bundled"]
default = ["bundled"]

system = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.64.0", optional = true }
cc = { version = "1.0.66", optional = true }
copy_dir = { version = "0.1.2", optional = true }
