[package]
authors = ["Christoph Herzog <chris@theduke.at>", "Icemic J <bingfeng.web@gmail.com>"]
categories = ["external-ffi-bindings"]
description = "QuickJS-NG Javascript Engine FFI bindings"
documentation = "https://docs.rs/libquickjs-ng-sys"
edition = "2021"
keywords = ["quickjs", "quickjs-ng", "sys"]
license = "MIT"
name = "libquickjs-ng-sys"
readme = "README.md"
repository = "https://github.com/Icemic/quickjs-rusty"
version = "0.10.0"

[build-dependencies]
bindgen = "0.72.1"
cc = {version = "1.0.66", features = ["parallel"]}
copy_dir = "0.1.2"
